Les images en grand vu que j'ai de la place

--- a/Partie2.tex
+++ b/Partie2.tex
@@ -42,7 +42,7 @@ Ces logiciels ont donc par conséquent deux utilités principales :
 
 \begin{figure}
   \begin{center}
-    \includegraphics[scale=0.7]{images/workflow.png}
+    \includegraphics[scale=1.57]{images/workflow.png}
     \caption{ Chaque utilisateur possède une copie du code source
     ainsi que toutes les versions précédentes de celui-ci, ce qui n'est pas
     le cas de l'existant. Le serveur sert de point de rencontre entre les
@@ -136,13 +136,13 @@ hypertexte avec le bon chemin d'arborescence est une tâche fastidieuse.
 J'ai donc, à l'aide de mes connaissances en système UNIX, créé un script
 qui analyse un dossier défini et qui liste les différents dépôts tout en
 leur mettant les bonnes adresses de téléchargement en préfixe comme nous
-le montre la figure~\ref{repo}. Du coup, un simple copier-coller du lien
-du dépôt voulu dans tortoiseGit suffit pour cloner, gain de productivité
-et de simplicité réunies.
+le montre la figure~\ref{repo} en page \pageref{repo}. Du coup, un
+simple copier-coller du lien du dépôt voulu dans tortoiseGit suffit pour
+cloner, gain de productivité et de simplicité réunies.
 
 \begin{figure}
     \begin{center}
-        \includegraphics[scale=0.7]{images/repo.png}
+        \includegraphics[scale=0.8]{images/repo.png}
         \caption{La liste des dépôts cliquables.}
         \label{repo}
     \end{center}
@@ -179,4 +179,4 @@ machine virtuelle Windows\, \footnote{À partir du logiciel VirtualBox.}
 ; pour créer mon script qui s'exécute en console ; et qui lance enfin un
 terminal Linux pour faire la mise à jour\dots
 % subsection Mise à jour locale automatique (end)%}}} section Les
-% utilitaires (end)%}}} chapter La gestion de version (end)%}}}
+% utilitaires (end)%}}}
