--- a/Partie4.tex
+++ b/Partie4.tex
@@ -42,8 +42,10 @@ l'utilisation conventionnelle de l'application.
 
 \begin{figure}
   \begin{center}
-    \includegraphics{images/gema.png}
-    \caption{Schéma d'utilisation de GeMa via l'Internet.}
+    \includegraphics[scale=1.5]{images/gema.png}
+    \caption{Ceci représente l'utilisation de GeMa via le réseau
+    Internet. Dans le cadre du déploiement chez Syngenta, le serveur Web
+    est remplacé par IITAMP en local chez le client.}
     \label{gema}
   \end{center}
 \end{figure}
