--- a/Partie1.tex
+++ b/Partie1.tex
@@ -1,13 +1,15 @@
-\chapter{Les entreprises} % (fold) \label{cha:Les entreprises}
+\chapter{Les entreprises} % (fold)
+\label{cha:Les entreprises}
+
 
 \begin{it}
 
 Ce chapitre illustre les entreprises dans lequels j'ai évolué. Dans un
 premier temps \emph{IdentIt} m'a acceuilli pour le premier stage puis
 dans un second temp ce sont les deux entreprises \emph{IdentIt-A2SI}. Je
-présente aussi l'entreprise \emph{Syngenta} qui acceuil mon projet de
-stage IITAMP qui est décrit dans le chapitre \ref{cha:Mise en oeuvre
-d'IITAMP}.
+présente aussi l'entreprise \emph{Syngenta} qui est le client qui
+utilise mon projet de stage IITAMP. Cette mise en \oe{}uvre est décrite
+dans le chapitre \ref{cha:Mise en oeuvre d'IITAMP}.
 
 \end{it}
 
