Correction de l'introduction de la partie2

--- a/Partie2.tex
+++ b/Partie2.tex
@@ -4,7 +4,8 @@
 \begin{it}
 J'ai eu pour objectif de déployer un nouvel outil de gestion de version
 dans l'entreprise. Cette partie évoque les détails de cette mise en
-\oe{}uvre.
+\oe{}uvre. Pour l'anecdote Git fut choisi comme remplacement à
+Subversion lorsque \bsc{M.~Dubourg} consulta mon curiculum-vitae.
 \end{it}
 
 \section{Git : Le gestionnaire de code source} % (fold)%{{{
