--- a/Partie1.tex
+++ b/Partie1.tex
@@ -4,8 +4,8 @@
 
 \begin{it}
 
-Ce chapitre illustre les entreprises dans lequels j'ai évolué. Dans un
-premier temps \emph{IdentIt} m'a acceuilli pour le premier stage puis
+Ce chapitre illustre les entreprises dans lesquels j'ai évolué. Dans un
+premier temps \emph{IdentIt} m'a accueilli pour le premier stage puis
 dans un second temp ce sont les deux entreprises \emph{IdentIt-A2SI}. Je
 présente aussi l'entreprise \emph{Syngenta} qui est le client qui
 utilise mon projet de stage IITAMP. Cette mise en \oe{}uvre est décrite
@@ -14,7 +14,7 @@ dans le chapitre \ref{cha:Mise en oeuvre d'IITAMP}.
 \end{it}
 
 \section{Les entreprises d'accueils} % (fold)
-\label{sec:Les entreprises d'aceuils}
+\label{sec:Les entreprises d'accueils}
 
 \subsection{IdentIt} % (fold)
 \label{sub:IdentIt}
@@ -35,7 +35,7 @@ spécialisé sur le développement Web.
 \subsection{A2SI} % (fold)
 \label{sub:A2SI}
 
-\emph{A2SI}, implantée au coeur du tissu industriel dunkerquois, est une
+\emph{A2SI}, implantée au c\oe{}ur du tissu industriel Dunkerquois, est une
 entreprise spécialisée dans l’étude et la réalisation de projets
 d’automatisation, de régulation et d’instrumentation de process
 industriels. Son équipe est composée de 3 ingénieurs et de 3
@@ -52,18 +52,18 @@ entreprise ce situai dans la rue de la république à Saint Pol Sur Mer.
 répondre aux besoins de solutions informatiques toujours plus grand dans
 les industries. Ceux-ci ont tout d'abord enménagé à Petite-Synthe
 pendant deux ans dans une pièce d'approximativement vingt-cinq mètres carrées
-pour quatre personnes ce qui n'était pas évident lorsque l'on acceuil
-une personne supplémentaire, nous étions un peu sérré.
+pour quatre personnes ce qui n'était pas évident lorsque l'on accueil
+une personne supplémentaire, nous étions un peu serré.
 
 Au cours du deuxième stage, les entreprises ont \og fusionné \fg{} dans
 de nouveau locaux dans la zone industrielle de Saint Pol Sur Mer. Cela
 ma permis de vivre une fusion d'entreprise, d'évoluer dans un grand
-batiment neuf d'a peu près cinq-cent mètres carrées ainsi que de
-connaitres de nouvelles personnes.
+bâtiment neuf d'à peu près cinq-cent mètres carrées ainsi que de
+connaitre de nouvelles personnes.
 
 % subsection La fusion (end)
 
-% section Les entreprises d'aceuils (end)
+% section Les entreprises d'accueils (end)
 
 \section{L'entreprise cliente} % (fold)
 \label{sec:L'entreprise cliente}
