--- a/Partie1.tex
+++ b/Partie1.tex
@@ -22,7 +22,7 @@ dans le chapitre \ref{cha:Mise en oeuvre d'IITAMP}.
 \emph{IdentIt} est une SARL d'édition de logiciels spécialisé dans
 l'informatique industrielle et des systèmes d'identification par
 radio-fréquence RFID\,\footnote{\emph{Radio Frequency IDentification.}}.
-Elle est composée de quatre personnes et se situai à Petite-Synthe
+Elle est composée de quatre personnes et se situait à Petite-Synthe
 durant mon premier stage. \bsc{M.~Dubourg} et \bsc{M.~Lesage} sont les
 fondateurs de cette structure, le premier s'occupe de la partie
 technique en tant que chef de projet et le second de la partie gestion
@@ -38,27 +38,27 @@ spécialisé sur le développement Web.
 \emph{A2SI}, implantée au c\oe{}ur du tissu industriel Dunkerquois, est une
 entreprise spécialisée dans l’étude et la réalisation de projets
 d’automatisation, de régulation et d’instrumentation de process
-industriels. Son équipe est composée de 3 ingénieurs et de 3
+industriels. Son équipe, composée de 3 ingénieurs et de 3
 techniciens, met ses atouts au service de la qualité du travail et de la
 satisfaction des clients, tant en France qu’à l’étranger. Cette
-entreprise ce situai dans la rue de la république à Saint Pol Sur Mer.
+entreprise se situait dans la rue de la république à Saint Pol Sur Mer.
 
 % subsection A2SI (end)
 
 \subsection{La fusion} % (fold)
 \label{sub:La fusion}
 
-\emph{IdentIt} est une sous-cursale d'\emph{A2SI} qui fut crée pour
+\emph{IdentIt} est une sous-cursale d'\emph{A2SI} qui fut créée pour
 répondre aux besoins de solutions informatiques toujours plus grand dans
-les industries. Ceux-ci ont tout d'abord enménagé à Petite-Synthe
-pendant deux ans dans une pièce d'approximativement vingt-cinq mètres carrées
-pour quatre personnes ce qui n'était pas évident lorsque l'on accueil
-une personne supplémentaire, nous étions un peu serré.
+les industries. Ceux-ci ont tout d'abord emménagé à Petite-Synthe
+pendant deux ans dans une pièce d'approximativement vingt-cinq mètres
+carrés pour quatre personnes ce qui n'était pas évident lorsque l'on
+accueille une personne supplémentaire, nous étions un peu serrés.
 
 Au cours du deuxième stage, les entreprises ont \og fusionné \fg{} dans
-de nouveau locaux dans la zone industrielle de Saint Pol Sur Mer. Cela
-ma permis de vivre une fusion d'entreprise, d'évoluer dans un grand
-bâtiment neuf d'à peu près cinq-cent mètres carrées ainsi que de
+de nouveaux locaux dans la zone industrielle de Saint Pol Sur Mer. Cela
+m'a permis de vivre une fusion d'entreprise, d'évoluer dans un grand
+bâtiment neuf d'à peu près cinq-cent mètres carrés ainsi que de
 connaitre de nouvelles personnes.
 
 % subsection La fusion (end)
@@ -68,8 +68,8 @@ connaitre de nouvelles personnes.
 \section{L'entreprise cliente} % (fold)
 \label{sec:L'entreprise cliente}
 
-Le groupe Syngenta est un des leaders mondiaux de l’agrofourniture.
-Ce groupe développe une approche par culture reposant sur 2 piliers,
+Le groupe Syngenta est un des leaders mondiaux de l’agrofourniture.  Ce
+groupe développe une approche par culture reposant sur deux piliers,
 d'une part la création, le développement et la commercialisation de
 variétés pour les productions agricoles majeures, d'autre part la
 protection des plantes.
