--- a/Intro.tex
+++ b/Intro.tex
@@ -18,13 +18,13 @@ de version de code source plus évolué que l'existant.
 
 Mon deuxième stage, qui est l'objet de cette note de synthèse,
 consistait à continuer le travail précédent sur le gestionnaire de
-version puis à crée un serveur Web dérivée d'un logiciel libre existant
+version puis à créer un serveur Web dérivée d'un logiciel libre existant
 pour ensuite le déployer avec une application d'\emph{IdentIt} chez un
 client, le tout en s'accordant avec le système d'information de
 l'acquéreur.
 
 Cette note de synthèse suit un plan spécifique, mais les événements ne
-se sont pas passés forcement dans l'ordre auquel ils sont présentées. En
+se sont pas passés forcement dans l'ordre auquel ils sont présentés. En
 effet, à cause des difficultés rencontrées et des problématiques
 nouvelles données en cours de stage, je suis souvent passé d'une
 réalisation à une autre.
