--- a/Partie1.tex
+++ b/Partie1.tex
@@ -6,7 +6,7 @@
 
 Ce chapitre illustre les entreprises dans lesquels j'ai évolué. Dans un
 premier temps \emph{IdentIt} m'a accueilli pour le premier stage puis
-dans un second temp ce sont les deux entreprises \emph{IdentIt-A2SI}. Je
+dans un second temps ce sont les deux entreprises \emph{IdentIt-A2SI}. Je
 présente aussi l'entreprise \emph{Syngenta} qui est le client qui
 utilise mon projet de stage IITAMP. Cette mise en \oe{}uvre est décrite
 dans le chapitre \ref{cha:Mise en oeuvre d'IITAMP}.
@@ -19,7 +19,7 @@ dans le chapitre \ref{cha:Mise en oeuvre d'IITAMP}.
 \subsection{IdentIt} % (fold)
 \label{sub:IdentIt}
 
-\emph{IdentIt} est une SARL d'édition de logiciels spécialisé dans
+\emph{IdentIt} est une SARL d'édition de logiciels spécialisée dans
 l'informatique industrielle et des systèmes d'identification par
 radio-fréquence RFID\,\footnote{\emph{Radio Frequency IDentification.}}.
 Elle est composée de quatre personnes et se situait à Petite-Synthe
@@ -41,7 +41,7 @@ d’automatisation, de régulation et d’instrumentation de process
 industriels. Son équipe, composée de 3 ingénieurs et de 3
 techniciens, met ses atouts au service de la qualité du travail et de la
 satisfaction des clients, tant en France qu’à l’étranger. Cette
-entreprise se situait dans la rue de la république à Saint Pol Sur Mer.
+entreprise se situait dans la rue de la République à Saint Pol Sur Mer.
 
 % subsection A2SI (end)
 
@@ -49,7 +49,7 @@ entreprise se situait dans la rue de la république à Saint Pol Sur Mer.
 \label{sub:La fusion}
 
 \emph{IdentIt} est une sous-cursale d'\emph{A2SI} qui fut créée pour
-répondre aux besoins de solutions informatiques toujours plus grand dans
+répondre aux besoins de solutions informatiques toujours plus grands dans
 les industries. Ceux-ci ont tout d'abord emménagé à Petite-Synthe
 pendant deux ans dans une pièce d'approximativement vingt-cinq mètres
 carrés pour quatre personnes ce qui n'était pas évident lorsque l'on
