--- a/Partie4.tex
+++ b/Partie4.tex
@@ -62,7 +62,7 @@ moindre coût.
 
 Le réseau privé virtuel vise à apporter certains éléments essentiels
 dans la transmission de données : l'authentification (et donc
-l'identification) des interlocuteurs, la confidentialité des données via
+l'identification) des interlocuteurs et la confidentialité des données via
 le chiffrement (qui vise à les rendre inutilisables par quelqu'un
 d'autre que le destinataire). La figure~\ref{vpn} illustre le principe
 de ce type de connexion.
@@ -71,7 +71,7 @@ La mise en \oe{}uvre d'IITAMP ainsi que de GeMa s'effectuant dans
 l'usine de Nerac près de bordeaux, le client nous à prêter un ordinateur
 portable avec tout les outils nécessaire à la connexion à distance pour
 éviter de me déplacer de Dunkerque jusqu'au site, ce qui représente à
-peu près 600 kilomètres...
+peu près six cent kilomètres...
 
 \begin{figure}
   \begin{center}
@@ -92,7 +92,7 @@ informations récoltés par GeMa dans le SI de l'entreprise à des fins de
 traçabilité, ce qui permet à partir des autres logiciels du client de
 faire des statistiques de production.
 
-Pour cette duplication, il à fallu que je développe un script PHP qui
+Pour cette duplication, il a fallu que je développe un script PHP qui
 tout d'abord interroge la base de donnée de GeMa pour récupérer les
 données, qui ensuite traite ses données pour les rendre compatibles à la
 structure de la base du client ainsi qu'a la technologie SQL Server
@@ -104,7 +104,7 @@ utilisée et qui enfin insère ses données traités dans la base du client.
 Comme nous l'avons vu, GeMa utilise la mobilité pour le rapport des
 interventions. Pour tester si l'application GeMa fonctionne correctement
 ainsi que le script de duplication de donnée, quelques tests furent
-nécessaire. Étant donnée que le site de production n'est pas proche,
+nécessaire. Sachant que le site de production n'est pas proche,
 l'utilisation d'un émulateur de PDA au travers du réseau VPN fut
 nécessaire.
 
