--- a/Partie3.tex
+++ b/Partie3.tex
@@ -59,11 +59,11 @@ produits \emph{IdentIt}.
 Pour proposer une maintenance de bug efficace est facile il a fallut
 installer le module PHP \emph{Xdebug} qui permet d'afficher des erreurs
 plus significatives que celles de PHP par défaut. En effet, celui-ci
-permet la coloration syntaxique ainsi que les valeurs des variables qui
-précède le bug. J'ai aussi externalisé les fichiers d'historique dans un
-dossiers séparé ce qui permet d'y accéder facilement. Auquel cas on
-puisse demander au client de nous envoyer le dossier archivé par
-courrier électronique pour analyser si Xdebug ne suffisait pas pour
+permet la coloration syntaxique ainsi que d'afficher les valeurs des 
+variables qui précède le bug. J'ai aussi externalisé les fichiers 
+d'historique dans un dossiers séparé ce qui permet d'y accéder facilement.
+Auquel cas on puisse demander au client de nous envoyer le dossier archivé 
+par courrier électronique pour analyser si Xdebug ne suffisait pas pour
 d'écrire l'erreur rencontré par téléphone.
 % subsection La maintenabilité (end)%}}}
 
@@ -74,7 +74,7 @@ Comme les dossiers sont séparés méticuleusement, une mise à jour de
 l'applicatif web ou du serveur IITAMP ce fait à partir en quelques
 étapes très simple contrairement au logiciel de base qui aurait
 nécessité beaucoup de manipulation, la plus pars de ses interventions
-étant demander au client lorsque les applications seront misent en
+étant demandé au client lorsque les applications seront mise en
 production.
 % subsection L'évolutivité (end)%}}}
 
@@ -103,7 +103,7 @@ gain de 20 mega-octets à été constaté.
 
 Pour rendre simple l'utilisation du serveur web pour le client, il à
 fallut créer des scripts d'automatisations pour certaines taches pas
-forcements évidentes pour les non initiés. Par exemple l'installation des
+forcements évidentes pour les non-initiés. Par exemple l'installation des
 applications entant que services ainsi que le démarrage des dit services.
 J'ai aussi développer une page d'index dans le cas ou le client à
 plusieurs applications web de l'entreprise \emph{IdentIt}, auquel cas une
