Correction globale (merci Jessica !)

--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -5,22 +5,22 @@
 progression que m'ont apportés ces stages. Je peux dire en toute
 humilité que j'en ressors grandi.
 
-J'ai pu m'appercevoir que l'entreprise utilisait toujours les technologies
-que j'ai mis en place durant la première année, des modifications ont
-été aportées mais on mon code de base est toujours là ce qui indique une
-certaine qualité dans le travail que j'ai pu accomplir.
+J'ai pu m'appercevoir que l'entreprise utilisait toujours les
+technologies que j'ai mis en place durant la première année, des
+modifications ont été aportées mais mon code de base est toujours là, ce
+qui indique une certaine qualité dans le travail que j'ai pu accomplir.
 
-J'ai continuer à former les développeurs sur Git pour qu'ils aillent
+J'ai continué de former les développeurs sur Git pour qu'ils aillent
 toujours plus loin dans l'exploitation de celui-ci. En effet, j'avais
-constaté des la première semaine du deuxième stage que quelques
+constaté dès la première semaine du deuxième stage que quelques
 principes fondamentaux d'utilisation avait été oubliés. J'ai pu aussi
-leur présenter des nouvelles fonctionnalitées qui sont apparut pendant
-le laps de temps entre les deux stages. L'usage de base convient dans
-90\%{} des cas mais certaines particularitées sont toujours bonne à
-connaitre.
+leur présenter de nouvelles fonctionnalitées qui sont apparut pendant le
+laps de temps entre les deux stages. L'usage de base convient dans
+90\%{} des cas mais certaines particularités sont toujours bonnes à
+connaître.
 
 J'ai découvert le travail de développeur en entreprise et je dois dire
-que cela me plait, cependant ce n'est pas toujours évident.  Bloquer sur
+que cela me plaît, cependant ce n'est pas toujours évident.  Bloquer sur
 un problème toute la journée sans avancer est très pénible
 intellectuellement, j'ai connu beaucoup de maux de tête et de matins
 difficiles. Travailler toute la journée à concevoir des algorithmes est
@@ -36,6 +36,6 @@ orientation. Je souhaite continuer mes études vers une licence
 professionnelle systèmes informatiques et logiciels option \og
 Développement et Administration de sites Internet et Intranet \fg{} qui
 permettra de me spécialiser dans le Web et la sécurité, qui sont des
-marchés porteurs autant dans les entreprises publiques que privées avant
-de m'insérer dans le monde du travail.
+marchés porteurs autant dans les entreprises publiques que privées,
+avant de m'insérer dans le monde du travail.
 % chapter Conclusion (end)
