--- a/Intro.tex
+++ b/Intro.tex
@@ -3,14 +3,14 @@
 
 \lettrine{J}{e} m'appelle Julien \bsc{Stechele}, je suis actuellement en
 BTS\, \footnote{\emph{Brevet de Technicien Supérieur.}} informatique de
-gestion option développeur d'applications et dans le cadre de mes études
-j'ai eu la chance d'effectuer deux stages durant cette formation. Mon
-stage de première année s'est déroulé du 16 mai 2011 au 8 juillet 2011
-dans la société \emph{IdentIt} ainsi que mon deuxième stage qui lui
-s'est déroulé du 3 janvier 2012 au 21 février 2012.
+gestion option développeur d'applications et dans le cadre de cette
+formation j'ai eu la chance d'effectuer deux stages. Mon stage de
+première année s'est déroulé du 16 mai 2011 au 8 juillet 2011 dans la
+société \emph{IdentIt}, ainsi que mon deuxième stage qui lui s'est
+déroulé du 3 janvier 2012 au 21 février 2012.
 
-Mon premier stage consistait à développer un utilitaire pour la partie
-web de comparaison de bases de données qui permettrait d'améliorer le
+Mon premier stage consistait à développer un utilitaire de comparaison
+de bases de données pour la partie web, qui permettrait d'améliorer le
 suivi des mises à jour d'une base obsolète à partir d'une base de
 référence et aussi de fournir les requêtes permettant cette mise à jour.
 Mon deuxième travail était de mettre en place un nouvel outil de gestion
@@ -18,14 +18,14 @@ de version de code source plus évolué que l'existant.
 
 Mon deuxième stage, qui est l'objet de cette note de synthèse,
 consistait à continuer le travail précédent sur le gestionnaire de
-version puis à créer un serveur Web dérivée d'un logiciel libre existant
+version puis à créer un serveur Web dérivé d'un logiciel libre existant
 pour ensuite le déployer avec une application d'\emph{IdentIt} chez un
 client, le tout en s'accordant avec le système d'information de
 l'acquéreur.
 
-Cette note de synthèse suit un plan spécifique, mais les événements ne
-se sont pas passés forcement dans l'ordre auquel ils sont présentés. En
-effet, à cause des difficultés rencontrées et des problématiques
-nouvelles données en cours de stage, je suis souvent passé d'une
-réalisation à une autre.
+Cette note de synthèse suit un plan spécifique, cependant les événements
+ne se sont pas passés forcément dans l'ordre dans lequel ils sont
+présentés. En effet, à cause des difficultés rencontrées et des
+problématiques nouvelles, données en cours de stage, je suis souvent
+passé d'une réalisation à une autre.
 % chapter Introduction (end)
