--- a/Partie1.tex
+++ b/Partie1.tex
@@ -4,17 +4,17 @@
 
 \begin{it}
 
-Ce chapitre illustre les entreprises dans lesquels j'ai évolué. Dans un
-premier temps \emph{IdentIt} m'a accueilli pour le premier stage puis
-dans un second temps ce sont les deux entreprises \emph{IdentIt-A2SI}. Je
-présente aussi l'entreprise \emph{Syngenta} qui est le client qui
+Ce chapitre illustre les entreprises dans lesquelles j'ai évolué. Dans
+un premier temps \emph{IdentIt} m'a accueilli pour le premier stage puis
+dans un second temps ce sont les deux entreprises \emph{IdentIt-A2SI}.
+Je présente aussi l'entreprise \emph{Syngenta} qui est le client qui
 utilise mon projet de stage IITAMP. Cette mise en \oe{}uvre est décrite
 dans le chapitre \ref{cha:Mise en oeuvre d'IITAMP}.
 
 \end{it}
 
-\section{Les entreprises d'accueils} % (fold)
-\label{sec:Les entreprises d'accueils}
+\section{Les entreprises d'accueil} % (fold)
+\label{sec:Les entreprises d'accueil}
 
 \subsection{IdentIt} % (fold)
 \label{sub:IdentIt}
@@ -35,13 +35,13 @@ spécialisé sur le développement Web.
 \subsection{A2SI} % (fold)
 \label{sub:A2SI}
 
-\emph{A2SI}, implantée au c\oe{}ur du tissu industriel Dunkerquois, est une
-entreprise spécialisée dans l’étude et la réalisation de projets
+\emph{A2SI}, implantée au c\oe{}ur du tissu industriel Dunkerquois, est
+une entreprise spécialisée dans l’étude et la réalisation de projets
 d’automatisation, de régulation et d’instrumentation de process
-industriels. Son équipe, composée de 3 ingénieurs et de 3
-techniciens, met ses atouts au service de la qualité du travail et de la
-satisfaction des clients, tant en France qu’à l’étranger. Cette
-entreprise se situait dans la rue de la République à Saint Pol Sur Mer.
+industriels. Son équipe, composée de 3 ingénieurs et de 3 techniciens,
+met ses atouts au service de la qualité du travail et de la satisfaction
+des clients, tant en France qu’à l’étranger. Cette entreprise se situait
+dans la rue de la République à Saint Pol Sur Mer.
 
 % subsection A2SI (end)
 
@@ -49,21 +49,21 @@ entreprise se situait dans la rue de la République à Saint Pol Sur Mer.
 \label{sub:La fusion}
 
 \emph{IdentIt} est une sous-cursale d'\emph{A2SI} qui fut créée pour
-répondre aux besoins de solutions informatiques toujours plus grands dans
-les industries. Ceux-ci ont tout d'abord emménagé à Petite-Synthe
+répondre aux besoins de solutions informatiques toujours plus grands
+dans les industries. Ceux-ci ont tout d'abord emménagé à Petite-Synthe
 pendant deux ans dans une pièce d'approximativement vingt-cinq mètres
 carrés pour quatre personnes ce qui n'était pas évident lorsque l'on
 accueille une personne supplémentaire, nous étions un peu serrés.
 
-Au cours du deuxième stage, les entreprises ont \og fusionné \fg{} dans
-de nouveaux locaux dans la zone industrielle de Saint Pol Sur Mer. Cela
-m'a permis de vivre une fusion d'entreprise, d'évoluer dans un grand
-bâtiment neuf d'à peu près cinq-cent mètres carrés ainsi que de
+Au cours du deuxième stage, les entreprises ont se sont regroupées dans
+un même bâtiment, en zone industrielle de Saint Pol Sur Mer. Cela m'a
+permis de vivre une \og fusion \fg{} d'entreprise, d'évoluer dans un
+grand bâtiment neuf d'à peu près cinq-cent mètres carrés ainsi que de
 connaitre de nouvelles personnes.
 
 % subsection La fusion (end)
 
-% section Les entreprises d'accueils (end)
+% section Les entreprises d'accueil (end)
 
 \section{L'entreprise cliente} % (fold)
 \label{sec:L'entreprise cliente}
