--- a/Partie3.tex
+++ b/Partie3.tex
@@ -2,44 +2,46 @@
 \label{cha:Création d'IITAMP}
 
 \begin{it}
-  La majeur partie des entreprises utilisant l'informatique
-  dispose d'un réseau local. Le but de IITAMP\, \footnote{\emph{IdentIt
-  Apache MySQL PHP.}} est de fournir les outils capables de faire
-  fonctionner une application Web développé par \emph{IdentIt} sur un
-  poste informatique d'une entreprise de façon simple et efficace, ce
-  qui permet de ce passer d'un hébergeur sur internet et d'autres
-  avantages.
+
+  La majeure partie des entreprises utilisant l'informatique disposent
+  d'un réseau local. Le but de IITAMP\, \footnote{\emph{IdentIt Apache
+  MySQL PHP.}} est de fournir les outils capables de faire fonctionner
+  une application Web développée par \emph{IdentIt} sur un poste
+  informatique d'une entreprise de façon simple et efficace, ce qui
+  permet de se passer d'un hébergeur sur internet et de bénéficier
+  d'autres avantages.
+
 \end{it}
 
 \section{Les avantages d'un intranet} % (fold)%{{{
 \label{sec:Les avantages d'un intranet}
 
-\lettrine{C}{ertaines} entreprises dans un but de confidentialité
-préfèrent utiliser des applications en intranet. Dans mon cas, un
-serveur sous Windows Server 2008 utilise IITAMP ainsi
-qu'une application \emph{IdentIt} pour qu'a partir du réseau local tout
-les ordinateurs puissent utiliser l'application. De ce fait, le produit
-n'est pas accessible via l'Internet.
+\lettrine{C}{ertaines} entreprises, dans un but de confidentialité
+préfèrent utiliser des applications en intranet. Dans le cadre de mon
+stage, un serveur sous Windows Server 2008 utilise IITAMP ainsi qu'une
+application d'\emph{IdentIt} pour qu'a partir du réseau local tout les
+ordinateurs puissent utiliser l'application. De ce fait, le produit
+n'est pas accessible via Internet.
 
 La confidentialité n'est pas le seul atout. En effet, passer par un
 réseau d'entreprise en terme de performance est avantageux car les
-requêtes entre le client et le serveur ce font \emph{intra muros} tandis
-que passer par un hébergeur qui peut ce trouver à des milliers de
-kilomètres affecte les délais. Utiliser une solution d'hébergement sur
+requêtes entre le client et le serveur ce font \emph{intra muros} ;
+alors que passer par un hébergeur qui peut se trouver à des milliers de
+kilomètres, affecte les délais. Utiliser une solution d'hébergement sur
 le réseau des réseaux à un coût alors qu'une solution locale n'est pas
 forfaitaire.
 
 Dans le cas d'un hébergement, si la connexion à internet vient à être
-interrompu, le service n'est plus disponible. Par contre avec notre
-solution ça continue à fonctionner.
+interrompue, le service n'est plus disponible. Par contre, avec notre
+solution cela continue de fonctionner.
 % section Les avantages d'un intranet (end)%}}}
 
 \section{La base applicative} % (fold)%{{{
 \label{sec:La base applicative}
 
-Je suis tout d'abord parti d'une base XAMPP générique. C'est un logiciel
-libre développé par une équipe de bénévoles. Cette ensemble de
-programmes permettent de mettre en \oe{}uvre un serveur web sur un PC
+Je suis tout d'abord parti d'une base XAMPP générique. Il s'agit d'un
+logiciel libre développé par une équipe de bénévoles. Cette ensemble de
+programmes permet de mettre en \oe{}uvre un serveur web sur un PC
 Windows à des fins de développement. La suite XAMPP regroupe les
 logiciels Apache\, \footnote{Serveur HTTP}, MySQL\, \footnote{Serveur de
 base de données.} et PHP\, \footnote{\emph{PHP: Hypertext Preprocessor}
@@ -56,64 +58,63 @@ produits \emph{IdentIt}.
 \subsection{La maintenabilité} % (fold)%{{{
 \label{sub:La maintenabilité}
 
-Pour proposer une maintenance de bug efficace est facile il a fallut
+Pour proposer une maintenance de bug efficace et facile, il a fallut
 installer le module PHP \emph{Xdebug} qui permet d'afficher des erreurs
 plus significatives que celles de PHP par défaut. En effet, celui-ci
-permet la coloration syntaxique ainsi que d'afficher les valeurs des 
-variables qui précède le bug. J'ai aussi externalisé les fichiers 
-d'historique dans un dossiers séparé ce qui permet d'y accéder facilement.
-Auquel cas on puisse demander au client de nous envoyer le dossier archivé 
-par courrier électronique pour analyser si Xdebug ne suffisait pas pour
-d'écrire l'erreur rencontré par téléphone.
+permet la coloration syntaxique ainsi que l'affichage des valeurs des
+variables qui précèdent le bug. J'ai aussi externalisé les fichiers
+d'historique dans un dossier séparé, ce qui permet un accès plus facile
+dans le cas où il faudrait demander au client de nous envoyer le dossier
+archivé par courrier électronique pour l'analyser si Xdebug ne suffisait
+pas pour d'écrire l'erreur rencontré par téléphone.
 % subsection La maintenabilité (end)%}}}
 
 \subsection{L'évolutivité} % (fold)%{{{
 \label{sub:L'évolutivité}
 
 Comme les dossiers sont séparés méticuleusement, une mise à jour de
-l'applicatif web ou du serveur IITAMP ce fait à partir en quelques
-étapes très simple contrairement au logiciel de base qui aurait
-nécessité beaucoup de manipulation, la plus pars de ses interventions
-étant demandé au client lorsque les applications seront mise en
+l'applicatif web ou du serveur IITAMP se fait à partir de quelques
+étapes très simples contrairement au logiciel de base qui aurait
+nécessité beaucoup de manipulations, la plus part de ces interventions
+étant demandées au client lorsque les applications seront mises en
 production.
 % subsection L'évolutivité (end)%}}}
 
-\subsection{La pérennité des données} % (fold)
+\subsection{La pérennité des données} % (fold)%{{{
 \label{sub:La pérennité des données}
 
-La informations des bases de données ainsi que les informations du
-navigateur Web sont extraite du dossier IITAMP ce qui permet de faire
-une sauvegarde efficace de celles-ci. La sauvegarde ce fait à partir
-d'une tache journalière que j'ai décrite dans un document pour
-l'utilisateur.
-% subsection La pérennité des données (end)
+Les informations des bases de données ainsi que celles du navigateur Web
+sont extraites du dossier IITAMP ce qui permet de faire une sauvegarde
+efficace de celles-ci. La sauvegarde se fait à partir d'une tache
+journalière que j'ai décrite dans un document pour l'utilisateur.
+% subsection La pérennité des données (end)%}}}
 
 \subsection{L'éfficacité} % (fold)%{{{
 \label{sub:L'éfficacité}
 
 Pour optimiser le serveur IITAMP, une inspection profonde du logiciel
-fut nécessaire. En effet, celui-ci est composé de base d'une multitude de
-librairies et modules qui ne sont pas forcement utile au applications
-développé par \emph{IdentIt}. De ce fait, un nettoyage fut entrepris. Un
-gain de 20 mega-octets à été constaté.
+fut nécessaire. En effet, celui-ci est composé de base d'une multitude
+de librairies et modules qui ne sont pas forcément utiles aux
+applications développées par \emph{IdentIt}. De ce fait, un nettoyage
+fut entrepris. Un gain de 20 mega-octets a été constaté.
 % subsection L'éfficacité (end)%}}}
 
 \subsection{La simplicité} % (fold)%{{{
 \label{sub:La simplicité}
 
-Pour rendre simple l'utilisation du serveur web pour le client, il à
-fallut créer des scripts d'automatisations pour certaines taches pas
-forcements évidentes pour les non-initiés. Par exemple l'installation des
-applications entant que services ainsi que le démarrage des dit services.
-J'ai aussi développer une page d'index dans le cas ou le client à
-plusieurs applications web de l'entreprise \emph{IdentIt}, auquel cas une
-sélection de l'application est a faire.
+Pour rendre simple l'utilisation du serveur web pour le client, il a
+fallut créer des scripts d'automatisation pour certaines taches pas
+forcément évidentes pour les non-initiés. Par exemple l'installation des
+applications en tant que services ; ainsi que le démarrage des dit
+services.  J'ai également développé une page d'index au cas où le client
+ait plusieurs applications web de l'entreprise \emph{IdentIt}, auquel
+cas, une sélection de l'application est à faire.
 % subsection La simplicité (end)%}}}
 
 \subsection{La propriété} % (fold)%{{{
 \label{sub:La propriété}
 
-Pour la partie juridique dans un soucis de propriété intellectuelle,
+Pour la partie juridique, dans un soucis de propriété intellectuelle,
 j'ai installé un module qui permet le chiffrement du code source PHP,
 cette extension s'appelle Bcompiler et m'a servi lors de l'installation
 des applications après la finalisation du serveur IITAMP.
@@ -133,15 +134,15 @@ des applications après la finalisation du serveur IITAMP.
     nouvellement installé en entreprise ou mise à jour de celui-ci.
 
   \item[Préparation d'une application :] Illustre les étapes de
-    préparation d'une application Web d'\emph{IdentIt} pour quel soit
-    parfaitement intégré à IITAMP.
+    préparation d'une application Web d'\emph{IdentIt} pour quelle soit
+    parfaitement intégrée à IITAMP.
 
   \item[Déploiement d'une application :] Comment mettre en place ou
     mettre à jour une application web dans un IITAMP déjà en service.
 
   \item[Maintenance de bases de données :] Explication de la mise en
     place d'une sauvegarde automatique des bases de données des
-    applications ainsi que la restauration de ses sauvegardes.
+    applications ainsi que la restauration de ces sauvegardes.
 
   \item[Démarche d'activation de GeMa :] Documentation pour
     \emph{IdentIt} compréhensible par les non techniciens qui explique
